discussion/kv_engine/145802/145802_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44140: Make KVStore::getCollectionsManifest return status

Change-Id: Ibedcb0e5528f033a6063308890af20bc99da6361

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-02-17 16:50:57.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-17 17:24:41.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7156/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20: error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
            return false;
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7156/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7156/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33674/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1511): error C2440: "return": cannot convert from "bool" to "CouchKVStore::CompactDBInternalStatus" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33674/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28952/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28952/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7803/ : FAILURE

Compile error at [2021-02-17T16:54:40.169Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7803/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9096/ : FAILURE

Compile error at [2021-02-17T17:18:54.879Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9096/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16649/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8750/ : FAILURE

Compile error at [2021-02-17T17:19:08.734Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot convert ?bool? to ?CouchKVStore::CompactDBInternalStatus? in return
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8750/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8888/ : FAILURE

Compile error at [2021-02-17T17:22:15.454Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot convert ?bool? to ?CouchKVStore::CompactDBInternalStatus? in return
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8888/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5693/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
